[package]
name = "ytrs_subs"
version = "0.1.0"
authors = ["partoftheworlD <partoftheworldcs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
error-chain = "0.12.4"
quick-xml = "0.20.0"
clap = "2.33.3"
